@@ -381,8 +381,6 @@ S3method(summary, hhh4)
 S3method(print, summary.hhh4)
 S3method(nobs, hhh4)
 S3method(logLik, hhh4)
-S3method(AIC, hhh4)
-S3method(BIC, hhh4)
 S3method(terms, hhh4)
 S3method(coef, hhh4)
 S3method(vcov, hhh4)
@@ -403,7 +401,6 @@ S3method(print, ah4)
 S3method(summary, ah4)
 S3method(print, summary.ah4)
 S3method(logLik, ah4)
-S3method(AIC, ah4)
 S3method(terms, ah4)
 S3method(coef, ah4)
 S3method(fixef, ah4)
